--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-handlebars": "^4.0.2",
     "mongoose": "^6.1.6"
   }
 }
